[gd_scene load_steps=8 format=3 uid="uid://dp0urywp01v5y"]

[ext_resource type="Theme" uid="uid://dx3obqeiafc1l" path="res://GUI/GUI_Theme.tres" id="1_6wcit"]
[ext_resource type="Script" path="res://GUI/gui.gd" id="1_r8enw"]
[ext_resource type="Texture2D" uid="uid://dd74j0qvurxui" path="res://Assets/Icons/Hammer.png" id="3_awf45"]
[ext_resource type="Texture2D" uid="uid://cmby8iggue7g0" path="res://Assets/Icons/wrench.png" id="3_brmmy"]
[ext_resource type="Texture2D" uid="uid://di3nqj8fg5ymd" path="res://Assets/Icons/Upgrade.png" id="5_bd1l1"]
[ext_resource type="Texture2D" uid="uid://bi5ikoklrogno" path="res://Assets/Book.png" id="6_1ja12"]
[ext_resource type="Texture2D" uid="uid://bj5lg728p1x2l" path="res://Assets/upgrade_tut.png" id="6_gp2mt"]

[node name="GUI" type="Control" groups=["GUI"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_r8enw")

[node name="Panel" type="Panel" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.399597
anchor_top = 0.888457
anchor_right = 0.599403
anchor_bottom = 1.00154
offset_left = -0.336029
offset_top = 0.279968
offset_right = 0.487915
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 10
theme = ExtResource("1_6wcit")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -65.0
offset_right = 55.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("1_6wcit")

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("1_6wcit")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
mouse_filter = 2
theme = ExtResource("1_6wcit")

[node name="Expansion" type="Button" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = ExtResource("3_awf45")
expand_icon = true

[node name="Repair" type="Button" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("1_6wcit")
icon = ExtResource("3_brmmy")
expand_icon = true

[node name="Upgrade" type="Button" parent="Panel/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = ExtResource("5_bd1l1")
expand_icon = true

[node name="TutorialPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 140)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.714826
anchor_top = 0.667852
anchor_right = 0.974826
anchor_bottom = 0.884259
offset_left = 7.52002
offset_top = 2.23196
offset_right = 8.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("1_6wcit")

[node name="TextureRect" type="TextureRect" parent="TutorialPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.348347, 0.349986)
mouse_filter = 2
texture = ExtResource("6_gp2mt")
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -61.0
offset_right = -24.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_6wcit")
alignment = 2

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
icon = ExtResource("6_1ja12")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/HBoxContainer/Expansion" to="." method="_on_expansion_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/HBoxContainer/Repair" to="." method="_on_repair_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MarginContainer/HBoxContainer/Upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
